--- a/Ejercicio nivel2/EjercicioEstilo.css
+++ b/Ejercicio nivel2/EjercicioEstilo.css
@@ -3,32 +3,31 @@
     margin: 0;
     padding: 0;
    }
-body{
+
+
+/* body{
     
-    background: #2980B9;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #FFFFFF, #6DD5FA, #2980B9);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #FFFFFF, #6DD5FA, #2980B9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+    background: #2980B9;  
+    background: -webkit-linear-gradient(to bottom, #FFFFFF, #6DD5FA, #2980B9);  
+    background: linear-gradient(to bottom, #FFFFFF, #6DD5FA, #2980B9); 
+} */
 
 /* Estilo para el contenedor  y para el resto de elemenos que compone la
     pagina para poder posicionarlos */
 
-.container > div, .container.showcase, .container .nav-main, .container .seccion, .container .div-articulos, .container .div-seccion, .container .footer {
-    padding:  1%;
-    grid-template-areas:        "header header header " 
-                                "nav-main nav-main nav-main "
-                                "seccion seccion seccion"
-                                "div-seccion"
-                                "footer footer footer";
-}
-
  .container{
     width: 90%;
-    max-width: 70%;
-    margin: 1% auto;
+    max-width: 1000px;
+    margin:1% auto;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, auto);
-    height: 100%;
+    height: 96vh;
+    display: grid;
+    grid-gap: 2%;
+    grid-template-areas:    "header header header"
+                            "nav-main nav-main nav-main"
+                            "seccion seccion seccion"
+                            "footer footer footer";
  }
 
  /* Estilos para el header, el logo y los tres iconos y el posicionamiento 
@@ -36,30 +35,27 @@ body{
  .header{    
     border-radius: 10px;
     background: url('imagen/pagina-web.jpg') no-repeat center center/cover;
-    margin-bottom: 2%; 
-    grid-area: header;
-    padding: 1%;
+    grid-area: header;  
 }
  .header-logo{
-    width: 150px; 
-    height: 80px; 
-    margin-left: 3%;
+    width: 20%; 
+    height: 70px; 
+    float: left;
 } 
 .header-brand1  {
     width: 70px;
     float: right;
-    margin-top: 1%;
-    
+    margin-right: 3%;
 }
 .header-brand2 {
     width: 70px;
     float: right;
-    margin-top: 1%;
+    
 }
 .header-brand3{
     width: 70px;
     float: right;
-    margin-top: 1%;
+    
 }
 
 /* Estilos de la barra de navegación, utilizando flexbox y poniendo un hover
@@ -70,7 +66,8 @@ body{
     color: white;
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
-    padding: 5px 30px;
+    justify-content: space-around;
+    margin-top: 1%;
 }
 .nav-menu:hover{
     color: black;
@@ -78,24 +75,32 @@ body{
 .nav-main{
     background-color: rgb(51, 97, 167);
     display: flex;
-    margin-bottom: 1%;
     border-radius: 10px;
     grid-area: nav-main;
-    padding: 10px;
-    justify-content: space-around;   
+    
+    justify-content: space-around;
+     
 }
+
 
 /* Section- estilo de parte de seccion y también de los tres primeros articulos
     usando grid para separarlos */
 
 .seccion{
     flex-flow: column nowrap;
-    display: flex;
+    /* display: flex;*/ 
     grid-area: seccion;
+    display: grid;
+    grid-gap: 5%;
+    /* max-height: 50%; */
+    
 }
 .div-articulos{
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-column: 1/4;
+    margin-left: 2%;
 }
 .div-articulos img{
     width: 90%;
@@ -118,15 +123,15 @@ body{
     por encima */
 
 .div-seccion{
-    /* margin-top: 1%; */
-    margin-left: 30%;
+    justify-content: center;
     display:flex;
-    grid-area: div-seccion;
-    align-items: center;
+    grid-column: 1/ 4; 
+    height: 50%;
+    min-height: 180px;
 }
 .div-seccion img{
-    width: 100%;
-    height: 200px;
+    width: 90%;
+    height:190px;
     border-radius: 10px;
 }
 .div-seccion article a{
@@ -135,8 +140,9 @@ body{
     text-transform: uppercase;
     text-align: center;
     justify-content: center;
-    display: flex;
+    /* display: flex; */
     text-decoration: none;
+
 }
 .div-seccion  a:hover{
     color: white;
@@ -154,18 +160,19 @@ p{
     font-family: 'Open Sans', sans-serif;
     color: rgb(17, 4, 53);
     padding-left: 4% ;
-    margin-bottom: 1%;
+    /* margin-bottom: 2%; */
     margin-left: 3%;
 }
 
 /* Estilos utilizados para el footer */
 
 .footer{
-    text-align: center;
+    min-height:20px;
     justify-content: center;
-    padding: 3% ;
+    padding: 1% ;
     display: flex;
     grid-area: footer;
+   /* margin-top: 1%; */
 }
 .footer i {
     color: black;
@@ -182,11 +189,19 @@ p{
 @media screen and (max-width: 768px){
    .container{ 
                 grid-template-areas:    
-                "header header header " 
-                "nav-main nav-main nav-main"
-                "seccion seccion seccion"
-                "div-seccion div-seccion"
-                "footer footer footer";
-
-   }
+                            "header header header"
+                            "nav-main nav-main nav-main"
+                            "seccion seccion "
+                            "footer footer footer"; 
+}                            
+    .container .articulo1{
+        grid-column: 1/-1;
+    }  
+    .container .articulo2{
+        grid-column: 1/-1;
+    } 
+    .container .articulo3{
+        grid-column: 1/-1;
+    }                    
+    
 }
