--- a/Ejercicio lvl1/estilo-1.css
+++ b/Ejercicio lvl1/estilo-1.css
@@ -24,7 +24,7 @@ body{
                             "seccion seccion seccion"
                             "footer footer footer";
 }
-
+/* este estilo lo uso para aplicar el mismo borde para todos los elementos */
 .contenedor > div,
 .contenedor .header,
 .contenedor .menu,
@@ -33,6 +33,7 @@ body{
       
     border-radius: 4px;
 }
+/* el estilo que uso para darle color al header su tamaño y su posicion */
 .contenedor .header{
     background-color: rgb(58, 55, 55);
     /* grid-column-start: 1;
@@ -40,7 +41,7 @@ body{
     padding: 2%;
     grid-area: header;
 }
-
+/* aqui puse tanto lo grande del logo como la posicion donde debe ir al igual que con los iconos */
 .contenedor .header-logo{
     background: rgb(151, 147, 147);
     padding: 2%;
@@ -67,6 +68,7 @@ body{
     padding: 2%;
     border-radius: 100px;
 }
+/* estilos para la barra menu y sus 5cajas, que separo con un justify-content y añadiendoles un gap */
 .menu{
     /* grid-column-start: 1;
     grid-column-end: 4; */
@@ -82,6 +84,8 @@ body{
     width: 200%;
     padding: 18px ;
 }
+
+/* en seccion he usado el display grid para que las tres cajas esten en las misma fila pero separadas con el grid-gap */
 .seccion{
     /* grid-column-start: 1;
     grid-column-end: 4; */
@@ -110,6 +114,7 @@ body{
     background: grey;
     padding: 60px ;
 }
+/* en esta parte de la section he puesto el estilo de el articulo que va separado  y lo he centrado haciendo que ocupe el resto del espacio */
 .div-seccion{
     height: 90%;
     min-height: 190px;
@@ -121,18 +126,17 @@ body{
 
 .articulo4{
     background: rgb(58, 55, 55);
-    /* padding: 12% ; */
     width: 60%;
 }
+/* en el footer solo le di color y mínimo de altura */
 .footer{
     background-color: rgb(58, 55, 55) ;
-    /* padding: 2%; */
-    /* margin-top: 1%; */
     min-height:10px;
     grid-area: footer;
   
 }
 
+/* con el media hago que cambien de posicion las cajas cuando el tamaño de la pagina en igual o inferior a 768px */
 @media screen and (max-width: 768px){ 
 
     .contenedor .articulo1{
